@startuml
title ER Diagram - Automated Invoice System

entity "user" as user {
  * id : integer <<PK>>
  --
  name : varchar
  email : varchar
  phone : varchar
  password_hash : varchar
}

entity "invoice" as invoice {
  * id : integer <<PK>>
  --
  invoice_number : varchar
  user_id : integer <<FK>>
  customer_name : varchar
  customer_email : varchar
  customer_phone : varchar
  subtotal : numeric
  tax : numeric
  total : numeric
  pdf_path : varchar
  created_at : datetime
}

entity "invoice_item" as invoice_item {
  * id : integer <<PK>>
  --
  invoice_id : integer <<FK>>
  description : varchar
  quantity : numeric
  price : numeric
}

user ||--o{ invoice : creates
invoice ||--o{ invoice_item : contains

note left of invoice
  - invoice.user_id references user.id
  - invoice_item.invoice_id references invoice.id
end note

@enduml
